Fix overflow issue caused by multiple banner images

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .jumbotron-header {
-    height: 75vh;
+    min-height: 75vh;
     /*background: url('img/vr-main-header-new.jpg') no-repeat;*/
     background-color: #000;
-    background-size: cover; 
+    background-size: cover;
     background-attachment: fixed; /* Mini parallax :) */
 }
 
@@ -17,10 +17,8 @@ section#home {
 }
 
 section#home .home-section {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    padding-top: 15vh;
+    padding-bottom: 2rem;
 }
 
 .navbar.fixed-top {
